experiment/lock-ordering-rs/tests/fail/b_a.stderr
error[E0277]: the trait bound `lock_ordering_rs::example::A: LockAfter<lock_ordering_rs::example::D>` is not satisfied
 --> tests/fail/b_a.rs:8:31
  |
8 |     let (a, mut ctx) = a.lock(&mut ctx).unwrap();
  |                          ---- ^^^^^^^^ the trait `LockAfter<lock_ordering_rs::example::D>` is not implemented for `lock_ordering_rs::example::A`
  |                          |
  |                          required by a bound introduced by this call
  |
  = help: the trait `LockAfter<lock_ordering_rs::example::D>` is not implemented for `lock_ordering_rs::example::A`
          but trait `LockAfter<Unlocked>` is implemented for it
  = help: for that trait implementation, expected `Unlocked`, found `lock_ordering_rs::example::D`
  = note: required for `lock_ordering_rs::example::D` to implement `LockBefore<lock_ordering_rs::example::A>`
note: required by a bound in `OrderedMutex::<Z, T>::lock`
 --> src/lib.rs
  |
  |     pub fn lock<A>(&self, _: &mut LockContext<A>) -> LockResult<Z, MutexGuard<T>>
  |            ---- required by a bound in this associated function
  |     where
  |         A: LockBefore<Z>,
  |            ^^^^^^^^^^^^^ required by this bound in `OrderedMutex::<Z, T>::lock`
